# Cagent-OS

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  WEB3_API_DOCUMENTATION.md  compose.yaml  pyproject.toml
config/: mcp_servers.json
docs/: web3-data-sources-evaluation.md
evaluation/: criterion.py  llm_judge.py  run_eval.py
evaluation/golden_cases/: README.md  case_001_triage.yaml  case_002_macro.yaml  case_003_nvda.yaml  case_004_crypto.yaml  case_005_crypto_stock.yaml  case_006_rag.yaml  case_007_cross_skill.yaml  case_008_degradation.yaml  case_009_discipline.yaml  case_010_opposing_view.yaml  scorer.py
skills/content-assetize/: SKILL.md
skills/content-triage/: SKILL.md
skills/content-triage/references/: templates.md  watchlist.md
skills/crypto-analysis/: SKILL.md
skills/crypto-funds-flow-analysis/: SKILL.md
skills/crypto-stock-analysis/: SKILL.md
skills/macro-analysis/: SKILL.md
skills/read-later/: SKILL.md
skills/tech-sector-bridge/: SKILL.md
skills/us-stock-analysis/: SKILL.md
src/cagent_os/agents/: __init__.py  definition.py  errors.py  prompt_compiler.py  run_engine.py
src/cagent_os/config/: constants.py  settings.py
src/cagent_os/conversations/: __init__.py  locking.py  models.py  projector.py  repository.py  service.py  sqlite_store.py
src/cagent_os/data_layer/: __init__.py  adapter.py  cross_validator.py
src/cagent_os/domain/: models.py
src/cagent_os/interfaces/: cli.py
src/cagent_os/llm/: __init__.py  base.py  capabilities.py  client.py  factory.py  negotiation.py  protocol.py  (+3 more)
(+71 files in other folders)
